@@ -245,6 +245,9 @@ truetype font, resident in the current directory, or in feh's font
 directory, and should be defined in the form fontname/size(points). (No
 extension). eg. -f myfont/12
 .TP 5
+.B --fontpath FONT
+Specify an extra directory in which to search for fonts.
+.TP 5
 .B -T,--title-font FONT
 Use FONT to print a title on the index, if no font is specified, a title
 will not be printed
