@@ -48,6 +48,8 @@ init_x_and_imlib (void)
 
   /* Set up the font stuff */
   imlib_add_path_to_font_path (".");
+  if(opt.fontpath)
+        imlib_add_path_to_font_path(opt.fontpath);
   imlib_add_path_to_font_path (PREFIX "/share/feh/fonts");
   imlib_add_path_to_font_path ("./ttfonts");
 
